# mlds-hw1

./: HW1_Regression_with_inference.ipynb  README.md  cars_prediction.csv  cars_test.csv  inference_objects.pickle  main.py  pyproject.toml
datasets/: cars_prediction.csv  cars_test.csv
src/: schemas.py  services.py
