[tool.poetry]
name = "mlds-hw1"
version = "0.1.0"
description = ""
authors = ["Anton Zaitsev <antonzaitsev474@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "mlds_hw1"}]

[tool.poetry.dependencies]
python = "^3.10"
notebook = "^7.0.6"
fastapi = "^0.104.1"
pandas = "^2.1.3"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scikit-learn = "^1.3.2"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
